syntax = "proto3";
import "userInfo.proto";

package match;

// 请求加入匹配队列
message ReqJoinMatch {
    string userId = 1;        // 用户ID
    int32 rank = 2;          // 用户段位/分数
    string gameMode = 3;     // 游戏模式
}

// 加入匹配队列的响应
message ResJoinMatch {
    bool success = 1;        // 是否成功加入
    string message = 2;      // 提示信息
    string matchId = 3;      // 匹配ID
}

// 请求取消匹配
message ReqCancelMatch {
    string matchId = 1;      // 匹配ID
}

// 取消匹配的响应
message ResCancelMatch {
    bool success = 1;        // 是否成功取消
    string message = 2;      // 提示信息
}

// 匹配成功通知
message NotifyMatchSuccess {
    string matchId = 1;          // 匹配ID
    string roomId = 2;           // 房间ID
    repeated Common.PlayerInfo players = 3;  // 匹配到的玩家信息
}



// 协议号枚举
enum ProtocolNumber {
    UNKNOWN = 0;
    REQ_JOIN_MATCH = 3001;
    RES_JOIN_MATCH = 3002;
    REQ_CANCEL_MATCH = 3003;
    RES_CANCEL_MATCH = 3004;
    NOTIFY_MATCH_SUCCESS = 3005;
} 